# tinyRAG

./: AGENTS.md  LICENSE  README.md  Start.ps1  api.py  chroma.py  chuck_text.py  database.py  pyproject.toml
docs/: additions.md
docs/hybrid_search/: sbert.py  tfidf.py
docs/tests/: tests.md  vector+bm25+hyde.json  vector+bm25.json  vector.json
frontend/: package.json  pnpm-lock.yaml
frontend/app/: api.ts  globals.css  layout.tsx  page.tsx
frontend/app/workspaces/[workspace_id]/chats/[chat_id]/: layout.tsx  page.tsx
frontend/components/: AppSideBar.tsx  ChatMessages.tsx  ChatWindow.tsx  NewChat.tsx  Option.tsx  UploadDoc.tsx
frontend_lite/: index.html  script.js
src/: CONFIG.toml  api.py  chroma.py  chuck_text.py  database.py  hybrid_search.py  shared.py
src/testing/: features_test.py  normalize.py  report_gen.py
src/testing/results/: metrics.csv  metrics_summary_by_mode.csv  pivot_hit_at_5.csv  pivot_kw_score.csv  pivot_mrr.csv  raw.json
testing/tinyAgent/: agent.py  tools.py
tinyRAG/frontend/: pnpm-lock.yaml
tinyRAG/frontend/app/: globals.css  idGenerator.ts  page.tsx
tinyRAG/frontend/app/settings/: page.tsx
tinyRAG/frontend/app/workspaces/[workspace_id]/chats/[chat_id]/: page.tsx
tinyRAG/frontend/components/: AppSideBar.tsx  ChatWindow.tsx  MarkdownMessage.tsx
