[project]
name = "10-11-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "chromadb>=1.5.1",
    "fastapi>=0.129.0",
    "mutagen>=1.47.0",
    "pypdf>=6.7.1",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "toml>=0.10.2",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
